--- a/public/pages/process.html
+++ b/public/pages/process.html
@@ -13,8 +13,8 @@
 <div class="col-xs-12">
     <div class="page-header page-header-with-buttons">
         <h1 class="pull-left">
-            <i class="icon-dashboard"></i>
-            <span>Dashboard - {{user}}</span>
+            <i class="fa fa-tasks"></i>
+            <span>Process - {{currentUser.displayName}}</span>
         </h1>
 
         <h1 class="pull-right" style="margin-top: 20px;">
