--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -1,22 +1,4 @@
-<div id="home">
-  <div id="slidecontent">
-    <div class="slide-panel" data-in="top" data-out="top">
-      <div id="spt-1" class="sptext">
-        <span class="msg-ulysses">Octoblu</span>
-        <span class="msg-welcome"> coming soon...</span>
-
-      </div>
-    </div>
-    <div class="slide-panel" data-in="bottom" data-out="bottom">
-      <div id="spt-2" class="sptext">
-        The Platform & API for the Internet of Everything
-      </div>
-    </div>
-  </div>
+<div class="row">
+  <h1>Home Page</h1>
+  <h2>Find me in public/pages/home.html</h2>
 </div>
-
-
-<div id="about" class="section">
-  <h3 class=""></h3>
-</div>
-
