--- a/public/pages/octoblu.html
+++ b/public/pages/octoblu.html
@@ -51,6 +51,6 @@
         </div><!-- /.navbar-collapse -->
     </div>
 </nav>
-<div ui-view class="row-fluid"></div>
+<div ui-view class="row-fluid main-container container-fluid"></div>
 
 <!-- Content -->
