--- a/public/index.html
+++ b/public/index.html
@@ -124,6 +124,7 @@
 <script src="angular/controllers/device-wizard.js"></script>
 <script src="angular/controllers/device-edit.js"></script>
 <script src="angular/controllers/smart-device.js"></script>
+<script src="angular/controllers/home.js"></script>
 <script src="angular/controllers/hub.js"></script>
 <script src="angular/controllers/analyze.js"></script>
 <script src="angular/controllers/api.js"></script>
