--- a/public/pages/octoblu.html
+++ b/public/pages/octoblu.html
@@ -14,7 +14,7 @@
         <div class="collapse navbar-collapse navbar-right" id="ob-navbar-collapse-1">
             <ul class="nav navbar-nav" ng-show="currentUser">
                 <li ui-sref-active="active"><a href ui-sref=".home"><i class="fa fa-dashboard fa-lg"></i>&nbsp;Home</a></li>
-                <li ui-sref-active="active"><a href ui-sref=".connector.devices.all"><i class="fa fa-code-fork fa-lg"></i>&nbsp;Connectors</a></li>
+                <li ui-sref-active="active"><a href ui-sref=".connector.devices.all"><i class="fa fa-code-fork fa-lg"></i>&nbsp;Connect</a></li>
                 <li ui-sref-active="active"><a href ui-sref=".design"><i class="fa fa-edit fa-lg"></i>&nbsp;Design</a></li>
                 <li ui-sref-active="active"><a href ui-sref=".process"><i class="fa fa-tasks fa-lg"></i>&nbsp;Process</a></li>
                 <li ui-sref-active="active"><a href ui-sref=".analyze"><i class="fa fa-bar-chart-o fa-lg"></i>&nbsp;Analyze</a></li>
