Connector -> connect (urls and visible text only)

--- a/public/pages/api_resources.html
+++ b/public/pages/api_resources.html
@@ -13,11 +13,11 @@
   <div class='container'>
     <div class='row' id='content-wrapper'>
       <div class='col-xs-12'>
-        
+
         <div class='page-header page-header-with-buttons'>
           <h1 class='pull-left'>
             <i class='icon-code-fork'></i>
-            <span>Connector</span>              
+            <span>Connect</span>
           </h1>
         </div>
         <ul class="nav nav-tabs">
@@ -99,11 +99,11 @@
         <div class="clearfix">
           <button class="btn btn-success" ng-click="editor()">Open Editor</button>
         </div>
-        
+
       </div>
 
     </div>
-    </div>    
+    </div>
 
 </section>
 
