--- a/public/pages/connector/index.html
+++ b/public/pages/connector/index.html
@@ -3,7 +3,7 @@
     <div class='page-header page-header-with-buttons'>
         <h1>
             <i class='icon-code-fork'></i>
-            <span>Connectors</span>
+            <span>Connect</span>
         </h1>
     </div>
     <div>
