--- a/public/pages/octoblu.html
+++ b/public/pages/octoblu.html
@@ -21,11 +21,10 @@
                 <li ui-sref-active="active"><a href ui-sref=".admin.all"><i class="fa fa-lock fa-lg"></i>&nbsp;Admin</a></li>
                 <li ui-sref-active="active"><a href ui-sref=".community"><i class="fa fa-group fa-lg"></i>&nbsp;Community</a></li>
                 <li class="dropdown navbar-right">
-                    <a href="#" class="dropdown-toggle" id="profile-drop-down-menu" data-toggle="dropdown">
+                    <a href class="dropdown-toggle" id="profile-drop-down-menu" data-toggle="dropdown">
                         <span class="avatar">
                         <img width="23" height="23" ng-src="{{currentUser.avatarUrl}}">
                         </span>
-                        <span class="user-name">{{currentUser.displayName}}</span>
                         <i class="fa fa-caret-down fa-lg"></i>
                     </a>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="profile-drop-down-menu">
