--- a/public/angular/directives/message-grapher/message-grapher.html
+++ b/public/angular/directives/message-grapher/message-grapher.html
@@ -10,7 +10,7 @@
    }
 </style>
 <div class="message-grapher">
-    <canvas width="400" height="100"></canvas>
+    <canvas ng-style="{width: graphWidth + 'px', height: '100px'}" width="{{graphWidth}}" height="100"></canvas>
     <div class="legend" ng-if="device">
         <div class=" pull-left legend-item" ng-repeat="(key, value) in messageLines">
             <div class="swatch" style="background-color:{{value.color}};">
