--- a/public/pages/connector/index.html
+++ b/public/pages/connector/index.html
@@ -6,9 +6,11 @@
             <span>Connectors</span>
         </h1>
     </div>
+
     <div>
-        <message-grapher class="message-summary col-xs-12"></message-grapher>
+        <message-grapher width="stretch"></message-grapher>
     </div>
+
     <ul class="nav nav-tabs">
         <li ui-sref-active="active">
             <a href="" ui-sref=".devices.all">Devices</a>
