--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,13 @@
     <meta content="text/html;charset=utf-8" http-equiv="content-type">
     <meta name="description" content="Octoblu - Internet of Everything!">
     <meta name="author" content="Octoblu">
-    <link href="assets/images/meta_icons/favicon.ico" rel="shortcut icon" type="image/x-icon">
-    <link href="assets/images/meta_icons/apple-touch-icon.png" rel="apple-touch-icon-precomposed">
-    <link href="assets/images/meta_icons/apple-touch-icon-57x57.png" rel="apple-touch-icon-precomposed" sizes="57x57">
-    <link href="assets/images/meta_icons/apple-touch-icon-72x72.png" rel="apple-touch-icon-precomposed" sizes="72x72">
-    <link href="assets/images/meta_icons/apple-touch-icon-114x114.png" rel="apple-touch-icon-precomposed" sizes="114x114">
-    <link href="assets/images/meta_icons/apple-touch-icon-144x144.png" rel="apple-touch-icon-precomposed" sizes="144x144">
+    <link href="/assets/images/meta_icons/favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <link href="/assets/images/meta_icons/apple-touch-icon.png" rel="apple-touch-icon-precomposed">
+    <link href="/assets/images/meta_icons/apple-touch-icon-57x57.png" rel="apple-touch-icon-precomposed" sizes="57x57">
+    <link href="/assets/images/meta_icons/apple-touch-icon-72x72.png" rel="apple-touch-icon-precomposed" sizes="72x72">
+    <link href="/assets/images/meta_icons/apple-touch-icon-114x114.png" rel="apple-touch-icon-precomposed" sizes="114x114">
+    <link href="/assets/images/meta_icons/apple-touch-icon-144x144.png" rel="apple-touch-icon-precomposed" sizes="144x144">
+    <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
 
     <title>Octoblu - Internet of Everything!</title>
 
@@ -25,11 +26,9 @@
     <link href="assets/stylesheets/style.css" rel="stylesheet" media="screen">
     <link href="assets/stylesheets/custom.css" rel="stylesheet">
     <link href="assets/stylesheets/animation.css" rel="stylesheet">
-    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" type="text/css"/>
-    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap-theme.css" type="text/css"/>
-    <link rel="stylesheet" href="lib/fontawesome/css/font-awesome.css" type="text/css"/>
-    <link href="lib/nvd3/nv.d3.css" rel="stylesheet"/>
-    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/assets/stylesheets/dist/styles.css" type="text/css"/>
+    <link rel="stylesheet" href="/lib/fontawesome/css/font-awesome.css" type="text/css"/>
+    <link href="/lib/nvd3/nv.d3.css" rel="stylesheet"/>
 
     <script src="lib/socket.io-client/socket.io.js"></script>
     <script src="assets/javascripts/skynet.bundle.js"></script>
