Fancy new color variables

--- a/public/pages/connector/advanced/devices.html
+++ b/public/pages/connector/advanced/devices.html
@@ -47,7 +47,7 @@
                 </td>
                 <td>{{device.online}}</td>
                 <td>
-                    <button class="btn btn-inverse" ng-click="editDevice(device)">Edit</button>
+                    <button class="btn btn-default" ng-click="editDevice(device)">Edit</button>
                     <button class="btn btn-danger" ng-click="deleteDevice(device)">Delete</button>
                 </td>
 
