--- a/public/pages/connector/advanced/gateways/index.html
+++ b/public/pages/connector/advanced/gateways/index.html
@@ -35,7 +35,7 @@
                                     <td>{{subdevice.name}}</td>
                                     <td>{{subdevice.type}}</td>
                                     <td>
-                                        <button class="btn btn-inverse"
+                                        <button class="btn btn-default"
                                                 ng-click="editSubdevice(hub, subdevice.type, subdevice)">Edit
                                         </button>
                                         <button class="btn btn-danger"
