--- a/public/pages/connector/channels/detail.html
+++ b/public/pages/connector/channels/detail.html
@@ -37,7 +37,7 @@
         <div class="clearfix">
           <button class="btn btn-default" ng-click="save()">Save</button>
         </div>
-        
+
       </div>
 
       <div class="pull-right" ng-show="isCustomAuth() && !isActivated()">
@@ -53,7 +53,7 @@
         <div class="clearfix">
           <button class="btn btn-default" ng-click="save()">Save</button>
         </div>
-        
+
       </div>
 
 
@@ -76,7 +76,7 @@
           <td>
             <a class="btn disabled btn-large btn-primary" ng-show="resource.httpMethod == 'GET'"> GET</a>
             <a class="btn disabled btn-large btn-success" ng-show="resource.httpMethod == 'POST'"> POST</a>
-            <a class="btn disabled btn-large btn-inverse" ng-show="resource.httpMethod == 'PUT'"> PUT</a>
+            <a class="btn disabled btn-large btn-info" ng-show="resource.httpMethod == 'PUT'"> PUT</a>
             <a class="btn disabled btn-large btn-warning" ng-show="resource.httpMethod == 'PATCH'"> PATCH</a>
             <a class="btn disabled btn-large btn-danger" ng-show="resource.httpMethod == 'DELETE'"> DELETE</a>
 
