--- a/public/pages/connector/devices/detail/subdevices.html
+++ b/public/pages/connector/devices/detail/subdevices.html
@@ -10,7 +10,7 @@
 
             <div class="btn-group btn-group-justified">
                 <div class="btn-group">
-                    <a href ng-click="editSubdevice(device, sub)" class="btn btn-inverse">
+                    <a href ng-click="editSubdevice(device, sub)" class="btn btn-default">
                         <i class="icon-edit"></i>
                         <span class="hidden-sm hidden-xs">Edit</span>
                     </a>
