--- a/public/pages/connector/devices/index.html
+++ b/public/pages/connector/devices/index.html
@@ -19,12 +19,12 @@
              </div>
              <div class="btn-group btn-group-justified">
                  <div class="btn-group">
-                     <a href ui-sref="^.detail({uuid : device.uuid})" class="btn btn-default" tooltip="Show Device Details" tooltip-placement="top" tooltip-popup-delay="10">
+                     <a href ui-sref="^.detail({uuid : device.uuid})" class="btn btn-primary" tooltip="Show Device Details" tooltip-placement="top" tooltip-popup-delay="10">
                          <i class="fa fa-th-large fa-lg" style="margin-right: 5px;"></i>Details
                      </a>
                  </div>
                  <div class="btn-group">
-                     <a href class="btn btn-inverse" ng-click="editDevice(device)" tooltip="Edit Device" tooltip-placement="top" tooltip-popup-delay="10">
+                     <a href class="btn btn-default" ng-click="editDevice(device)" tooltip="Edit Device" tooltip-placement="top" tooltip-popup-delay="10">
                          <i class="fa fa-edit fa-lg">&nbsp;&nbsp;</i>Edit
                      </a>
                  </div>
