--- a/public/pages/connector/index.html
+++ b/public/pages/connector/index.html
@@ -8,7 +8,7 @@
     </div>
 
     <div>
-        <message-grapher width="stretch"></message-grapher>
+        <message-grapher></message-grapher>
     </div>
 
     <ul class="nav nav-tabs">
