--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -37,7 +37,7 @@
                       Remember me
                     </label>
                   </div>
-                  <button type="submit" class="btn btn-block">Sign in</button>
+                  <button type="submit" class="btn btn-block btn-primary">Sign in</button>
                 </form>
                 <div class='text-center'>
                   <hr class='hr-normal'>
@@ -47,13 +47,13 @@
                 <br />
 
                 <div class="row text-center">
-                  <a class="btn btn-fb" href="{{getLoginUrl('/auth/facebook')}}" target="_self">
+                  <a class="btn btn-facebook" href="{{getLoginUrl('/auth/facebook')}}" target="_self">
                     <span class="fa fa-facebook"> Facebook</span>
                   </a>
-                  <a class="btn btn-primary" href="{{getLoginUrl('/auth/twitter')}}" target="_self">
+                  <a class="btn btn-twitter" href="{{getLoginUrl('/auth/twitter')}}" target="_self">
                     <span class="fa fa-twitter"> Twitter</span>
                   </a>
-                  <a class="btn btn-danger" href="{{getLoginUrl('/auth/google')}}" target="_self">
+                  <a class="btn btn-google-plus" href="{{getLoginUrl('/auth/google')}}" target="_self">
                     <span class="fa fa-google-plus"> Google+</span>
                   </a>
                 </div>
