added icons to page headers and moved uuids up on provile page

--- a/public/pages/analyze.html
+++ b/public/pages/analyze.html
@@ -2,7 +2,7 @@
 
 <div class='page-header page-header-with-buttons'>
     <h1>
-        <i class='icon-bar-chart'></i>
+        <i class='fa fa-bar-chart-o'></i>
         <span>Analyze</span>
     </h1>
 </div>
