--- a/public/pages/community.html
+++ b/public/pages/community.html
@@ -3,7 +3,7 @@
         <div>
             <h1>
               <span>
-                <i class='icon-group'></i>
+                <i class='fa fa-group'></i>
                 <span>Community</span>
               </span>
             </h1>
