--- a/public/pages/connector/index.html
+++ b/public/pages/connector/index.html
@@ -2,7 +2,7 @@
 
     <div class='page-header page-header-with-buttons'>
         <h1>
-            <i class='icon-code-fork'></i>
+            <i class='fa fa-code-fork'></i>
             <span>Connect</span>
         </h1>
     </div>
