--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -1,4 +1,25 @@
-<div class="row">
-  <h1>Home Page</h1>
-  <h2>Find me in public/pages/home.html</h2>
+<style type="text/css">
+    .dashboard-panel {
+        text-align: center;
+    }
+
+    .dashboard-panel h1 {
+        text-decoration: inherit;
+        color: inherit;
+        margin-bottom: 20px;
+    }
+</style>
+
+<div class="col-xs-12">
+    <div class="page-header page-header-with-buttons">
+        <h1>
+            <i class="fa fa-dashboard"></i>
+            <span>Home - {{currentUser.displayName}}</span>
+        </h1>
+    </div>
+    
+    <h4>Welcome to Octoblu! We empower you to connect things, systems, and people to our Internet of Things (IoT) platform to design flows, process events/data, and analyze/react to results, trends, and anomolies.</h4>
+
+    
+
 </div>
