--- a/public/pages/process.html
+++ b/public/pages/process.html
@@ -14,7 +14,7 @@
     <div class="page-header page-header-with-buttons">
         <h1>
             <i class="fa fa-tasks"></i>
-            <span>Process - {{currentUser.displayName}}</span>
+            <span>Process</span>
         </h1>
     </div>
     <div class="row">
