--- a/public/index.html
+++ b/public/index.html
@@ -131,6 +131,7 @@
 <script src="angular/controllers/docs.js"></script>
 <script src="angular/controllers/faqs.js"></script>
 <script src="angular/controllers/forgot.js"></script>
+<script src="angular/controllers/node-wizard.js"></script>
 <script src="angular/controllers/octoblu.js"></script>
 <script src="angular/controllers/login.js"></script>
 <script src="angular/controllers/pricing.js"></script>
