--- a/public/pages/connector/devices/index.html
+++ b/public/pages/connector/devices/index.html
@@ -40,12 +40,17 @@
     <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 device-actions">
         <div>
             <div class="btn-group btn-group-justified">
-                <div class="btn-group">
-                    <a class="btn btn-primary add-device device-action-button" href ui-sref="ob.connector.devices.wizard.instructions({claim:'gateway'})">
-                        <i class="fa fa-h-square fa-2x pull-left"></i>
-                        <span>Add Hub</span>
-                    </a>
-                </div>
+                <a class="btn btn-primary" href ui-sref="ob.nodewizard.addnode">
+                    <i class="fa fa-magic"></i>
+                    Wizard
+                </a>
+            </div>
+            <br>
+            <div class="btn-group btn-group-justified">
+                <a class="btn btn-info" href ui-sref="ob.connector.devices.wizard.instructions({claim:'gateway'})">
+                    <i class="fa fa-h-square"></i>
+                    Add Hub
+                </a>
             </div>
             <div ng-if="hasHubs" class="panel subdevice-actions">
                 <div class="panel-heading">
