--- a/public/pages/node-wizard/add-node.html
+++ b/public/pages/node-wizard/add-node.html
@@ -5,7 +5,7 @@
     <form class="form">
       <dif class="form-group">
         <div class="input-group">
-          <input type="text" class="form-control">
+          <input type="text" class="form-control" ng-model="deviceTypeSearch">
           <span class="input-group-addon">
             <i class="fa fa-search"></i>
           </span>
@@ -18,9 +18,9 @@
 <hr>
 
 <div class="row">
-  <div ng-repeat="deviceType in deviceTypes" class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
+  <div ng-repeat="deviceType in deviceTypes | filter: {name:deviceTypeSearch}" class="col-xs-6 col-sm-4 col-md-3 col-lg-2 device-thumbnail">
     <a href class="">
-      <div class="device-thumbnail" ng-style="{'background-image': 'url('+deviceType.logo+')'}"></div>
+      <div ng-style="{'background-image': 'url('+deviceType.logo+')'}"></div>
     </a>
   </div>
 </div>
