--- a/public/index.html
+++ b/public/index.html
@@ -121,6 +121,11 @@
 <script src="angular/controllers/smart-device.js"></script>
 <script src="angular/controllers/home.js"></script>
 <script src="angular/controllers/hub.js"></script>
+<script src="angular/controllers/add-channel.js"></script>
+<script src="angular/controllers/add-device.js"></script>
+<script src="angular/controllers/add-gateway.js"></script>
+<script src="angular/controllers/add-node.js"></script>
+<script src="angular/controllers/add-subdevice.js"></script>
 <script src="angular/controllers/analyze.js"></script>
 <script src="angular/controllers/api.js"></script>
 <script src="angular/controllers/channel.js"></script>
