--- a/public/pages/node-wizard/add-node.html
+++ b/public/pages/node-wizard/add-node.html
@@ -18,9 +18,9 @@
 <hr>
 
 <div class="row">
-  <div ng-repeat="nodeType in nodeTypes | filter: {name:nodeTypeSearch}" class="col-xs-6 col-sm-4 col-md-3 col-lg-2 node-thumbnail">
+  <div ng-repeat="nodeType in nodeTypes | filter: {name:nodeTypeSearch}" class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
     <a class="" ng-href="{{nextStepUrl(nodeType)}}">
-      <div ng-style="{'background-image': 'url('+nodeType.logo+')'}"></div>
+      <div ng-style="{'background-image': 'url('+nodeType.logo+')'}" class="node-thumbnail animated-popout"></div>
     </a>
   </div>
 </div>
