updated home icon

--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -13,13 +13,13 @@
 <div class="col-xs-12">
     <div class="page-header page-header-with-buttons">
         <h1>
-            <i class="fa fa-dashboard"></i>
+            <i class="fa fa-home"></i>
             <span>Home - {{currentUser.displayName}}</span>
         </h1>
     </div>
     
     <h4>Welcome to Octoblu! We empower you to connect things, systems, and people to our Internet of Things (IoT) platform to design flows, process events/data, and analyze/react to results, trends, and anomolies.</h4>
 
-    
+
 
 </div>
