--- a/public/pages/octoblu.html
+++ b/public/pages/octoblu.html
@@ -34,7 +34,7 @@
                         </li>
                     </ul>
                 </li>
-                <li ui-sref-active="active"><a href ui-sref=".home"><i class="fa fa-dashboard fa-lg"></i>&nbsp;Home</a></li>
+                <li ui-sref-active="active"><a href ui-sref=".home"><i class="fa fa-home fa-lg"></i>&nbsp;Home</a></li>
                 <li ui-sref-active="active"><a href ui-sref=".connector.devices.all"><i class="fa fa-code-fork fa-lg"></i>&nbsp;Connect</a></li>
                 <li ui-sref-active="active"><a href ui-sref=".design"><i class="fa fa-edit fa-lg"></i>&nbsp;Design</a></li>
                 <li ui-sref-active="active"><a href ui-sref=".process"><i class="fa fa-tasks fa-lg"></i>&nbsp;Process</a></li>
