--- a/public/index.html
+++ b/public/index.html
@@ -99,6 +99,7 @@
 <script src="angular/services/nodered.js"></script>
 <script src="angular/services/group.js"></script>
 <script src="angular/services/elastic.js"></script>
+<script src="angular/services/node-type.js"></script>
 <script src="angular/services/plugin.js"></script>
 <script src="angular/services/invitation.js"></script>
 <script src="angular/services/permissions.js"></script>
