--- a/public/pages/node-wizard/add-device/index.html
+++ b/public/pages/node-wizard/add-device/index.html
@@ -1,4 +1,4 @@
-<h2 class="text-center">Add a new {{nodeType.name}}</h2>
+<h2 class="text-center">{{nodeType.name}}</h2>
 
 <br>
 
@@ -13,7 +13,7 @@
 
 <div class="row">
   <div class="col-xs-12 col-md-offset-2 col-md-3">
-    <a href ui-sref="ob.nodewizard.adddevice.claim" class="btn btn-block btn-lg btn-primary">
+    <a href ui-sref="ob.nodewizard.adddevice.claim" class="btn btn-block btn-lg btn-info">
       <h1>
         <i class="fa fa-hand-o-right"></i>
         Claim
@@ -21,7 +21,7 @@
     </a>
   </div>
   <div class="col-xs-12 col-md-offset-2 col-md-3">
-    <a href ui-sref="ob.nodewizard.adddevice.add" class="btn btn-block btn-lg btn-info">
+    <a href ui-sref="ob.nodewizard.adddevice.add" class="btn btn-block btn-lg btn-primary">
       <h1>
         <i class="fa fa-plus"></i>
         Add New
