Complete add device workflow

--- a/public/pages/node-wizard/add-device/index.html
+++ b/public/pages/node-wizard/add-device/index.html
@@ -11,24 +11,8 @@
 <br>
 <br>
 
-<div class="row">
-  <div class="col-xs-12 col-md-offset-2 col-md-3">
-    <a href ui-sref="ob.nodewizard.adddevice.claim" class="btn btn-block btn-lg btn-info">
-      <h1>
-        <i class="fa fa-hand-o-right"></i>
-        Claim
-      </h1>
-    </a>
-  </div>
-  <div class="col-xs-12 col-md-offset-2 col-md-3">
-    <a href ui-sref="ob.nodewizard.adddevice.add" class="btn btn-block btn-lg btn-primary">
-      <h1>
-        <i class="fa fa-plus"></i>
-        Add New
-      </h1>
-    </a>
-  </div>
-</div>
+<div ui-view></div>
+
 
 <br>
 <br>
