--- a/public/pages/node-wizard/add-device/add.html
+++ b/public/pages/node-wizard/add-device/add.html
@@ -1,6 +1,11 @@
 <div class="row">
   <div class="col-xs-12 col-md-offset-3 col-md-6">
     <form class="form" ng-submit="addDevice()">
+      <div class="form-group">
+        <select class="form-control input-lg" ng-model="newDevice.selectedDevice" ng-options="device.uuid + '(' + (device.type || 'device') + ')' for device in newDevice.unclaimedDevices">
+          <option value="">Add New</option>
+        </select>
+      </div>
       <div class="form-group" ng-class="{'has-error': errorMessage}">
         <label for="name" class="control-label">Name</label>
         <input type="text" ng-model="newDevice.name" class="form-control input-lg" id="name" placeholder="My {{nodeType.name}}" required>
