cleared out responses at the beginning of every request

--- a/public/pages/connector/advanced/messaging.html
+++ b/public/pages/connector/advanced/messaging.html
@@ -66,6 +66,7 @@
                 <pre ng-hide="!model.messageResult">{{model.messageResult | json }}</pre>
             </div>
         </div>
+        <span>Note: Not all devices respond to messages</span>
 
     </div>
 </div>
