Select an existing hub to add a subdevice to

--- a/public/index.html
+++ b/public/index.html
@@ -126,6 +126,8 @@
 <script src="angular/controllers/add-device.js"></script>
 <script src="angular/controllers/add-node.js"></script>
 <script src="angular/controllers/add-subdevice.js"></script>
+<script src="angular/controllers/add-subdevice-form.js"></script>
+<script src="angular/controllers/add-subdevice-select-gateway.js"></script>
 <script src="angular/controllers/analyze.js"></script>
 <script src="angular/controllers/api.js"></script>
 <script src="angular/controllers/channel.js"></script>
