Move global message grapher to process page

--- a/public/pages/process.html
+++ b/public/pages/process.html
@@ -17,6 +17,9 @@
             <span>Process</span>
         </h1>
     </div>
+    <div>
+        <message-grapher></message-grapher>
+    </div>
     <div class="row">
         <div class="col-sm-4 dashboard-panel">
             <div class="panel-heading">
