--- a/public/pages/node-wizard/add-subdevice/form.html
+++ b/public/pages/node-wizard/add-subdevice/form.html
@@ -1,4 +1,15 @@
-<div class="row">
+<div class="row" ng-hide="newSubdevice.plugin">
+  <div class="col-xs-12 col-md-offset-3 col-md-6">
+    <h1 class="text-center">
+      Updating your gateway...
+    </h1>
+    <h1 class="text-center">
+      <i class="fa fa-spin fa-refresh"></i>
+    </h1>
+  </div>
+</div>
+
+<div class="row" ng-show="newSubdevice.plugin">
   <div class="col-xs-12 col-md-offset-3 col-md-6">
     <form class="form" ng-submit="addSubDevice()">
       <div class="form-group">
