Add gateway on the fly mostly works

--- a/public/index.html
+++ b/public/index.html
@@ -126,6 +126,7 @@
 <script src="angular/controllers/add-device.js"></script>
 <script src="angular/controllers/add-node.js"></script>
 <script src="angular/controllers/add-subdevice.js"></script>
+<script src="angular/controllers/add-subdevice-add-gateway.js"></script>
 <script src="angular/controllers/add-subdevice-form.js"></script>
 <script src="angular/controllers/add-subdevice-select-gateway.js"></script>
 <script src="angular/controllers/analyze.js"></script>
