--- a/public/pages/node-wizard/add-subdevice/select-gateway.html
+++ b/public/pages/node-wizard/add-subdevice/select-gateway.html
@@ -7,7 +7,7 @@
 <div class="row row-centered">
   <div ng-repeat="gateway in availableGateways | orderBy: 'name'" class="col-xs-6 col-sm-4 col-md-3 col-lg-2 col-centered">
     <h4 class="text-center">
-      <a href ui-sref="ob.nodewizard.addsubdevice.add({gatewayId: gateway.uuid})" class="">
+      <a href ui-sref="ob.nodewizard.addsubdevice.form({gatewayId: gateway.uuid})" class="">
         <div title="{{gateway.name}}" class="spiral-thumbnail animated-popout"></div>
         <strong>{{gateway.name}}</strong>
       </a>
@@ -15,7 +15,7 @@
   </div>
   <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 col-centered">
     <h4 class="text-center">
-      <a href class="">
+      <a href ui-sref="ob.nodewizard.addsubdevice.addGateway" class="">
         <div title="{{gateway.name}}" class="ghost-thumbnail animated-popout">
           <div>
             <i class="fa fa-2x fa-plus"></i>
