Add noauth channel

--- a/public/index.html
+++ b/public/index.html
@@ -121,6 +121,8 @@
 <script src="angular/controllers/home.js"></script>
 <script src="angular/controllers/hub.js"></script>
 <script src="angular/controllers/add-channel.js"></script>
+<script src="angular/controllers/add-channel-existing.js"></script>
+<script src="angular/controllers/add-channel-noauth.js"></script>
 <script src="angular/controllers/add-device.js"></script>
 <script src="angular/controllers/add-node.js"></script>
 <script src="angular/controllers/add-subdevice.js"></script>
