--- a/public/index.html
+++ b/public/index.html
@@ -123,6 +123,7 @@
 <script src="angular/controllers/add-channel.js"></script>
 <script src="angular/controllers/add-channel-existing.js"></script>
 <script src="angular/controllers/add-channel-noauth.js"></script>
+<script src="angular/controllers/add-channel-oauth.js"></script>
 <script src="angular/controllers/add-device.js"></script>
 <script src="angular/controllers/add-node.js"></script>
 <script src="angular/controllers/add-subdevice.js"></script>
