Changing Devices page to generic node page.

--- a/public/pages/connector/index.html
+++ b/public/pages/connector/index.html
@@ -9,7 +9,7 @@
 
     <ul class="nav nav-tabs">
         <li ui-sref-active="active">
-            <a href="" ui-sref=".devices.all">Devices</a>
+            <a href="" ui-sref=".nodes.all">Devices</a>
         </li>
         <li ui-sref-active="active">
             <a href="" ui-sref=".channels.index">Channels</a>
