--- a/public/index.html
+++ b/public/index.html
@@ -99,6 +99,7 @@
 <script src="angular/services/group.js"></script>
 <script src="angular/services/elastic.js"></script>
 <script src="angular/services/node-type.js"></script>
+<script src="angular/services/node.js"></script>
 <script src="angular/services/plugin.js"></script>
 <script src="angular/services/invitation.js"></script>
 <script src="angular/services/permissions.js"></script>
@@ -137,6 +138,7 @@
 <script src="angular/controllers/docs.js"></script>
 <script src="angular/controllers/faqs.js"></script>
 <script src="angular/controllers/forgot.js"></script>
+<script src="angular/controllers/node.js"></script>
 <script src="angular/controllers/node-wizard.js"></script>
 <script src="angular/controllers/octoblu.js"></script>
 <script src="angular/controllers/login.js"></script>
