--- a/public/pages/connector/nodes/index.html
+++ b/public/pages/connector/nodes/index.html
@@ -11,6 +11,14 @@
           </span>
                 </div>
             </div>
+            <div class="form-group">
+                <div class="btn-group btn-group-justified">
+                    <a class="btn btn-primary btn-lg" href ui-sref="ob.nodewizard.addnode">
+                        <i class="fa fa-plus fa-lg"></i>
+                        Add New Node
+                    </a>
+                </div>
+            </div>
         </form>
     </div>
 </div>
@@ -18,12 +26,26 @@
 <hr>
 
 <div class="row">
-    <div ng-repeat="node in nodes | filter: {name:nodeSearch} | orderBy: 'name'" class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
-        <a class="" ng-href="{{nextStepUrl(node)}}">
-            <div ng-style="{'background-image': 'url('+node.nodeType.logo+')'}" title="{{node.name}}" class="node-thumbnail animated-popout">
+    <div ng-if="nodes.length != 0">
+        <div ng-repeat="node in nodes | filter: {name:nodeSearch} | orderBy: 'name'"
+             class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
+            <a class="" ng-href="{{nextStepUrl(node)}}">
+                <div ng-style="{'background-image': 'url('+node.nodeType.logo+')'}" title="{{node.name}}"
+                     class="node-thumbnail animated-popout" ng-class="{faded: !isAvailable(node)}">
 
-            </div>
-        </a>
-        <div class="node-name">{{node.name}}</div>
+                </div>
+            </a>
+
+            <div class="node-name">{{node.name}}</div>
+        </div>
+    </div>
+    <div class="jumbotron" ng-if="nodes.length === 0">
+        <p class="lead">
+             <span class="fa-stack fa-2x">
+                <i class="fa fa-code-fork fa-stack-1x"></i>
+                <i class="fa fa-ban fa-stack-2x text-danger"></i>
+             </span>
+            You currently have no Active Nodes</p>
+
     </div>
 </div>
