--- a/public/assets/design/index-red.html
+++ b/public/assets/design/index-red.html
@@ -1,18 +1,78 @@
+<!-- <!DOCTYPE html>
+<html>
+<meta charset="utf-8">
+
+  Copyright 2013 IBM Corp.
+
+  Licensed under the Apache License, Version 2.0 (the "License");
+  you may not use this file except in compliance with the License.
+  You may obtain a copy of the License at
+
+  http://www.apache.org/licenses/LICENSE-2.0
+
+  Unless required by applicable law or agreed to in writing, software
+  distributed under the License is distributed on an "AS IS" BASIS,
+  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  See the License for the specific language governing permissions and
+  limitations under the License.
+
+<head>
+<title>Node-RED</title> -->
 <div class="row" class="designer-container"/>
 
-<link href="/assets/design/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen"/>
-<link href="/assets/design/jquery/css/smoothness/jquery-ui-1.10.3.custom.min.css" rel="stylesheet" media="screen"/>
-<link rel="stylesheet" type="text/css" href="/assets/design/orion/built-editor.css"/>
-<link rel="stylesheet" href="/assets/design/style.css"/>
-
-
-
-<!-- <div class="navbar navbar-inverse navbar-fixed-top">
+<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen"/>
+<link href="jquery/css/smoothness/jquery-ui-1.10.3.custom.min.css" rel="stylesheet" media="screen"/>
+<link rel="stylesheet" type="text/css" href="orion/built-editor.css"/>
+<link rel="stylesheet" href="style.css"/>
+<!-- <head>
+<body spellcheck="false"> -->
+<div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner">
-
+        <div class="container-fluid">
+            <!-- <a class="brand" href="#"><img src="node-red.png"> <span class="red">Node-RED</span> </a> -->
+            <div class="btn-group pull-right">
+                <a class="btn dropdown-toggle" data-toggle="dropdown" href="#"><i class="icon-align-justify"></i> <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a id="btn-sidebar" tabindex="-1" href="#"><i class="icon-ok pull-right"></i><i class="icon-list-alt"></i> Sidebar</a></li>
+                    <li class="divider"></li>
+                    <li class="dropdown-submenu pull-left"><a tabindex="-1" href="#"><i class="icon-edit"></i> Import from...</a>
+                        <ul class="dropdown-menu">
+                            <li><a id="btn-import" tabindex="-1" href="#"><i class="icon-edit"></i> Clipboard...</a></li>
+                            <li id="flow-menu-parent" class="dropdown-submenu pull-left">
+                                <a tabindex="-1" href="#"><i class="icon-book"></i> Library</a>
+                                <ul class="dropdown-menu"></ul>
+                            </li>
+                        </ul>
+                    </li>
+                    <li id="li-menu-export" class="dropdown-submenu disabled pull-left"><a tabindex="-1" href="#"><i class="icon-share"></i> Export to...</a>
+                        <ul class="dropdown-menu">
+                            <li id="li-menu-export-community" class="disabled"><a id="btn-export-community" tabindex="-1" href="#"><i class="icon-share"></i> Share...</a></li>
+                            <li id="li-menu-export-clipboard" class="disabled"><a id="btn-export-clipboard" tabindex="-1" href="#"><i class="icon-share"></i> Clipboard...</a></li>
+                            <li id="li-menu-export-library" class="disabled"><a id="btn-export-library" tabindex="-1" href="#"><i class="icon-book"></i> Library...</a></li>
+                        </ul>
+                    </li>
+                    <li class="divider"></li>
+                    <li><a id="btn-config-nodes" tabindex="-1" href="#"><i class="icon-th-list"></i> Configuration nodes...</a></li>
+                    <li class="divider"></li>
+                    <li class="dropdown-submenu pull-left"><a tabindex="-1" href="#"><i class="icon-th-large"></i> Workspaces</a>
+                        <ul id="workspace-menu-list" class="dropdown-menu">
+                            <li><a id="btn-workspace-add" tabindex="-1" href="#"><i class="icon-plus"></i> Add</a></li>
+                            <li><a id="btn-workspace-edit" tabindex="-1" href="#"><i class="icon-edit"></i> Rename</a></li>
+                            <li><a id="btn-workspace-delete" tabindex="-1" href="#"><i class="icon-minus"></i> Delete</a></li>
+                            <li class="divider"></li>
+                        </ul>
+                    </li>
+                    <li class="divider"></li>
+                    <li><a id="btn-keyboard-shortcuts" tabindex="-1" href="#"><i class="icon-question-sign"></i> Keyboard Shortcuts</a></li>
+                    <li><a id="btn-help" tabindex="-1" href="http://node-red.github.io/docs" target="_blank"><i class="icon-question-sign"></i> Help...</a></li>
+                </ul>
+            </div>
+            <div class="btn-group pull-right">
+                <a id="btn-deploy" class="btn action-deploy disabled" href="#"><i id="btn-icn-deploy" class="icon-upload"></i> Deploy</a>
+            </div>
+        </div>
     </div>
-</div> -->
-
+</div>
 <div id="main-container" class="sidebar-closed">
     <div id="palette">
         <img src="spin.svg" class="palette-spinner"/>
@@ -93,49 +153,6 @@
     </div>
 
     <div id="sidebar">
-        <div>        <div class="container-fluid">
-            <!-- <a class="brand" href="#"><img src="node-red.png"> <span class="red">Node-RED</span> </a> -->
-            <div class="btn-group pull-right">
-                <a class="btn dropdown-toggle" data-toggle="dropdown" href="#"><i class="icon-align-justify"></i> <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                    <li><a id="btn-sidebar" tabindex="-1" href="#"><i class="icon-ok pull-right"></i><i class="icon-list-alt"></i> Sidebar</a></li>
-                    <li class="divider"></li>
-                    <li class="dropdown-submenu pull-left"><a tabindex="-1" href="#"><i class="icon-edit"></i> Import from...</a>
-                        <ul class="dropdown-menu">
-                            <li><a id="btn-import" tabindex="-1" href="#"><i class="icon-edit"></i> Clipboard...</a></li>
-                            <li id="flow-menu-parent" class="dropdown-submenu pull-left">
-                                <a tabindex="-1" href="#"><i class="icon-book"></i> Library</a>
-                                <ul class="dropdown-menu"></ul>
-                            </li>
-                        </ul>
-                    </li>
-                    <li id="li-menu-export" class="dropdown-submenu disabled pull-left"><a tabindex="-1" href="#"><i class="icon-share"></i> Export to...</a>
-                        <ul class="dropdown-menu">
-                            <li id="li-menu-export-community" class="disabled"><a id="btn-export-community" tabindex="-1" href="#"><i class="icon-share"></i> Share...</a></li>
-                            <li id="li-menu-export-clipboard" class="disabled"><a id="btn-export-clipboard" tabindex="-1" href="#"><i class="icon-share"></i> Clipboard...</a></li>
-                            <li id="li-menu-export-library" class="disabled"><a id="btn-export-library" tabindex="-1" href="#"><i class="icon-book"></i> Library...</a></li>
-                        </ul>
-                    </li>
-                    <li class="divider"></li>
-                    <li><a id="btn-config-nodes" tabindex="-1" href="#"><i class="icon-th-list"></i> Configuration nodes...</a></li>
-                    <li class="divider"></li>
-                    <li class="dropdown-submenu pull-left"><a tabindex="-1" href="#"><i class="icon-th-large"></i> Workspaces</a>
-                        <ul id="workspace-menu-list" class="dropdown-menu">
-                            <li><a id="btn-workspace-add" tabindex="-1" href="#"><i class="icon-plus"></i> Add</a></li>
-                            <li><a id="btn-workspace-edit" tabindex="-1" href="#"><i class="icon-edit"></i> Rename</a></li>
-                            <li><a id="btn-workspace-delete" tabindex="-1" href="#"><i class="icon-minus"></i> Delete</a></li>
-                            <li class="divider"></li>
-                        </ul>
-                    </li>
-                    <li class="divider"></li>
-                    <li><a id="btn-keyboard-shortcuts" tabindex="-1" href="#"><i class="icon-question-sign"></i> Keyboard Shortcuts</a></li>
-                    <li><a id="btn-help" tabindex="-1" href="http://node-red.github.io/docs" target="_blank"><i class="icon-question-sign"></i> Help...</a></li>
-                </ul>
-            </div>
-            <div class="btn-group pull-right">
-                <a id="btn-deploy" class="btn action-deploy disabled" href="#"><i id="btn-icn-deploy" class="icon-upload"></i> Deploy</a>
-            </div>
-        </div></div>
         <ul id="sidebar-tabs"></ul>
         <div id="sidebar-content"></div>
     </div>
@@ -265,7 +282,6 @@
     </form>
 </div>
 
-
 <script type="text/x-red" data-template-name="export-clipboard-dialog">
     <div class="form-row">
         <label for="node-input-export" style="display: block; width:100%;"><i class="icon-share"></i> Nodes:</label>
@@ -305,29 +321,29 @@
     </div>
 </script>
 
-
-
-<script src="/assets/design/jquery/js/jquery-1.9.1.js"></script>
-<script src="/assets/design/ba-tiny-pubsub.js"></script>
-<script src="/assets/design/bootstrap/js/bootstrap.min.js"></script>
-<script src="/assets/design/jquery/js/jquery-ui-1.10.3.custom.min.js"></script>
-<script src="/assets/design/orion/built-editor.min.js"></script>
-<script src="/assets/design/d3.v3.min.js"></script>
-<script src="/assets/design/red/main.js"></script>
-<script src="/assets/design/red/ui/state.js"></script>
-<script src="/assets/design/red/nodes.js"></script>
-<script src="/assets/design/red/history.js"></script>
-<script src="/assets/design/red/validators.js"></script>
-<script src="/assets/design/red/ui/keyboard.js"></script>
-<script src="/assets/design/red/ui/tabs.js"></script>
-<script src="/assets/design/red/ui/view.js"></script>
-<script src="/assets/design/red/ui/sidebar.js"></script>
-<script src="/assets/design/red/ui/palette.js"></script>
-<script src="/assets/design/red/ui/tab-info.js"></script>
-<script src="/assets/design/red/ui/tab-config.js"></script>
-<script src="/assets/design/red/ui/editor.js"></script>
-<script src="/assets/design/red/ui/library.js"></script>
-<script src="/assets/design/red/ui/notifications.js"></script>
+<script src="jquery/js/jquery-1.9.1.js"></script>
+<script src="ba-tiny-pubsub.js"></script>
+<script src="bootstrap/js/bootstrap.min.js"></script>
+<script src="jquery/js/jquery-ui-1.10.3.custom.min.js"></script>
+<script src="orion/built-editor.min.js"></script>
+<script src="d3.v3.min.js"></script>
+<script src="red/main.js"></script>
+<script src="red/ui/state.js"></script>
+<script src="red/nodes.js"></script>
+<script src="red/history.js"></script>
+<script src="red/validators.js"></script>
+<script src="red/ui/keyboard.js"></script>
+<script src="red/ui/tabs.js"></script>
+<script src="red/ui/view.js"></script>
+<script src="red/ui/sidebar.js"></script>
+<script src="red/ui/palette.js"></script>
+<script src="red/ui/tab-info.js"></script>
+<script src="red/ui/tab-config.js"></script>
+<script src="red/ui/editor.js"></script>
+<script src="red/ui/library.js"></script>
+<script src="red/ui/notifications.js"></script>
+<!-- </body>
+</html> -->
 
 </div>
 <script>
@@ -336,3 +352,4 @@ window.onresize = function(event) {
   $('#designerFrame').attr('height',$("body").height()-106);
 }
 </script>
+
