Add simpleauth, fix noauth

--- a/public/pages/node-wizard/add-subdevice/select-gateway.html
+++ b/public/pages/node-wizard/add-subdevice/select-gateway.html
@@ -9,7 +9,7 @@
     <h4 class="text-center">
       <a href ui-sref="ob.nodewizard.addsubdevice.form({gatewayId: gateway.uuid})" class="">
         <div title="{{gateway.name}}" class="spiral-thumbnail animated-popout"></div>
-        <strong>{{gateway.name}}</strong>
+        <strong class="muted-link">{{gateway.name}}</strong>
       </a>
     </h4>
   </div>
