--- a/public/index.html
+++ b/public/index.html
@@ -125,6 +125,7 @@
 <script src="angular/controllers/add-channel-existing.js"></script>
 <script src="angular/controllers/add-channel-noauth.js"></script>
 <script src="angular/controllers/add-channel-oauth.js"></script>
+<script src="angular/controllers/add-channel-simple.js"></script>
 <script src="angular/controllers/add-device.js"></script>
 <script src="angular/controllers/add-node.js"></script>
 <script src="angular/controllers/add-subdevice.js"></script>
