--- a/public/pages/analyze.html
+++ b/public/pages/analyze.html
@@ -95,7 +95,34 @@
         </div>
         <input type="checkbox" ng-model="checked"> pretty print?
         <div class="panel-body">
-		<table ng-table="freeform_results_ngTable" show-filter="true" class="table">
+		<table class="table table-striped table-condensed table-hover">
+			<thead><tr><th ng-repeat="header in freeform_results_ngTable.headers" class="{{header.name}}" custom-sort order="header.name" sort="sort">{{header.name}}</th></tr></thead>
+			<tfoot>
+	                <td colspan="6">
+        	            <div class="pagination pull-right">
+	                        <ul>
+                        	    <li ng-class="{disabled: currentPage == 0}">
+                	                <a href ng-click="prevPage()">« Prev</a>
+        	                    </li>
+	
+	                            <li ng-repeat="n in range(pagedItems.length, currentPage, currentPage + gap) "
+                        	        ng-class="{active: n == currentPage}"
+                	            ng-click="setPage()">
+        	                        <a href ng-bind="n + 1">1</a>
+	                            </li>
+
+	                            <li ng-class="{disabled: (currentPage) == pagedItems.length - 1}">
+        	                        <a href ng-click="nextPage()">Next »</a>
+	                            </li>
+                        	</ul>
+                	    </div>
+	                </td>
+        	        </tfoot>
+			<pre>pagedItems.length: {{pagedItems.length|json}}</pre>
+	                <pre>currentPage: {{currentPage|json}}</pre>
+        	        <pre>currentPage: {{sort|json}}</pre>
+		</table>
+		<!--<table ng-table="freeform_results_ngTable" show-filter="true" class="table">
 	        <thead>
         	<tr>
 	            <th ng-repeat="column in columns" ng-show="column.visible"
@@ -126,7 +153,7 @@
             </table>
 		<div data-pagination="" data-num-pages="numPages()" 
 			  data-current-page="ff.currentPage" data-max-size="ff.maxSize"  
-			  data-boundary-links="true"></div>
+			  data-boundary-links="true"></div>-->
         </div>
     </div>
 
