--- a/public/pages/connector/advanced/gateways/index.html
+++ b/public/pages/connector/advanced/gateways/index.html
@@ -19,10 +19,10 @@
                 <tabset>
                     <tab heading="Subdevices" style="cursor:pointer;">
                         <div class="input-group">
-                            <select ng-model="selectedDeviceType"
-                                    ng-options="deviceType.name for deviceType in availableDeviceTypes | filter: {enabled : true}">
+                            <select ng-model="selectedNodeType"
+                                    ng-options="nodeType.name for nodeType in availableNodeTypes | filter: {enabled : true}">
                             </select>
-                            <a href class="btn btn-success" ng-class="{disabled : ! selectedDeviceType }" ng-click="editSubdevice(hub, selectedDeviceType.skynet.plugin)"><i class="fa fa-plus"></i>Add</a>
+                            <a href class="btn btn-success" ng-class="{disabled : ! selectedNodeType }" ng-click="editSubdevice(hub, selectedNodeType.skynet.plugin)"><i class="fa fa-plus"></i>Add</a>
                         </div>
                         <div class="table-responsive">
                             <table class="table table-striped table-hover">
