--- a/public/pages/connector/devices/subdevice/add-edit.html
+++ b/public/pages/connector/devices/subdevice/add-edit.html
@@ -1,5 +1,5 @@
 <div class="modal-header" >
-    <img ng-src="{{model.deviceType.logo}}" class="img-rounded pull-left" height="48px" width="48px">
+    <img ng-src="{{model.nodeType.logo}}" class="img-rounded pull-left" height="48px" width="48px">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="cancel()">&times;</button>
     <h3 class="modal-title text-center" style="padding-bottom: 1em;" id="myModalLabel">
         <select ng-model="model.hub" ng-options="hub.name for hub in model.hubs"></select>
