--- a/public/pages/connector/index.html
+++ b/public/pages/connector/index.html
@@ -9,13 +9,10 @@
 
     <ul class="nav nav-tabs">
         <li ui-sref-active="active">
-            <a href="" ui-sref=".nodes.all">Devices</a>
+            <a href="" ui-sref=".nodes.all">Nodes</a>
         </li>
         <li ui-sref-active="active">
-            <a href="" ui-sref=".channels.index">Channels</a>
-        </li>
-        <li ui-sref-active="active">
-            <a href="" ui-sref=".advanced.devices">Advanced</a>
+            <a href="" ui-sref=".advanced.messaging">Advanced</a>
         </li>
     </ul>
     <div class="tab-content" ui-view="">
