"Technically, we are done"

--- a/public/pages/design.html
+++ b/public/pages/design.html
@@ -7,7 +7,7 @@
         <div class="col-xs-12">
             <div class="page-header">
                 <div class="btn-group pull-right">
-                    <a class="btn btn-lg btn-default dropdown-toggle" data-toggle="dropdown" href="#"><i class="icon-align-justify"></i> <span class="caret"></span></a>
+                    <a class="btn btn-lg btn-default dropdown-toggle" data-toggle="dropdown" href><i class="icon-align-justify"></i> <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a id="btn-sidebar" tabindex="-1" href="#"><i class="icon-ok pull-right"></i><i class="icon-list-alt"></i> Sidebar</a></li>
                         <li class="divider"></li>
@@ -44,7 +44,7 @@
                     </ul>
                 </div>
                 <div class="btn-group pull-right">
-                    <a id="btn-deploy" class="btn btn-lg btn-default action-deploy disabled" href="#"><i id="btn-icn-deploy" class="icon-upload"></i> Deploy</a>
+                    <a ng-click="save()" id="btn-deploy" class="btn btn-lg btn-default action-deploy disabled" href><i id="btn-icn-deploy" class="icon-upload"></i> Deploy</a>
                 </div>
             </div>
         </div>
