updated home page

--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -1,25 +1,88 @@
-<style type="text/css">
-    .dashboard-panel {
-        text-align: center;
-    }
-
-    .dashboard-panel h1 {
-        text-decoration: inherit;
-        color: inherit;
-        margin-bottom: 20px;
-    }
-</style>
-
 <div class="col-xs-12">
     <div class="page-header page-header-with-buttons">
         <h1>
             <i class="fa fa-home"></i>
-            <span>Home - {{currentUser.displayName}}</span>
+            <span>Welcome to Octoblu! </span>
         </h1>
     </div>
     
-    <h4>Welcome to Octoblu! We empower you to connect things, systems, and people to our Internet of Things (IoT) platform to design flows, process events/data, and analyze/react to results, trends, and anomolies.</h4>
+    <h4>We empower you to connect things, systems, and people to our Internet of Things (IoT) platform to design flows, process events/data, and analyze/react to results, trends, and anomolies.</h4>
+    <br />
 
-
-
+</div>
+<div class="row">
+    <div class="col-xs-12 col-md-6">
+        <div class="jumbotron">
+            <div class="container">
+                <div class="col-lg-2">
+                    <i class="fa fa-code-fork fa-5x pull-left"></i>
+                </div>
+                <div class="col-lg-10">
+                    <h2>CONNECT</h2>
+                    <h3>Connect people, things, applications, and clouds</h3>
+                    <ul>
+                        <li>Direct Connect - WIRED</li>
+                        <li>Direct Connect - WIRELESS</li>
+                        <li>APIs</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-xs-12 col-md-6">
+        <div class="jumbotron">
+            <div class="container">
+                <div class="col-lg-2">
+                    <i class="fa fa-edit fa-5x pull-left"></i>
+                </div>
+                <div class="col-lg-10">
+                    <h2>DESIGN</h2>
+                    <h3>Design flows are a simple ‘drag and drop’ with automatic deployment to production</h3>
+                    <ul>
+                        <li>Creat powerful orchestrations</li>
+                        <li>Share flows with others</li>
+                        <li></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12 col-md-6">
+        <div class="jumbotron">
+            <div class="container">
+                <div class="col-lg-2">
+                    <i class="fa fa-tasks fa-5x pull-left"></i>
+                </div>
+                <div class="col-lg-10">
+                    <h2>PROCESS</h2>
+                    <h3>Securely process custom flows across multiple protocols and environments with advanced rights management model.</h3>
+                    <ul>
+                        <li>24/7 event monitoring and messaging</li>
+                        <li>Millisecond response time</li>
+                        <li></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-xs-12 col-md-6">
+        <div class="jumbotron">
+            <div class="container">
+                <div class="col-lg-2">
+                    <i class="fa fa-bar-chart-o fa-5x pull-left"></i>
+                </div>
+                <div class="col-lg-10">
+                    <h2>ANALYZE</h2>
+                    <h3>Built-in analysis tools for rich and deep analytics:</h3>
+                    <ul>
+                        <li>ElasticSearch</li>
+                        <li>Splunk</li>
+                        <li></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
