updated text on home

--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -44,7 +44,7 @@
         </h1>
     </div>
     
-    <h4>We empower you to connect things, systems, and people to our Internet of Things (IoT) platform to design flows, process events/data, and analyze/react to results, trends, and anomolies.</h4>
+    <h4>Connect things, systems, and people to our Internet of Things (IoT) platform to design flows, process events/data, and analyze/react to results, trends, and anomolies.</h4>
     <br />
 
 </div>
