Fix loading spinner on designer

--- a/public/assets/design/index-red.html
+++ b/public/assets/design/index-red.html
@@ -75,7 +75,7 @@
 </div>
 <div id="main-container" class="sidebar-closed">
     <div id="palette">
-        <img src="spin.svg" class="palette-spinner"/>
+        <i class="palette-spinner fa fa-spin fa-refresh fa-2x"></i>
         <div class="palette-scroll">
             <div class="palette-category">
                 <div class="palette-header"><i class="expanded icon-chevron-down"></i><span>skynet</span></div>
