--- a/public/pages/design.html
+++ b/public/pages/design.html
@@ -33,7 +33,7 @@
 
     <div id="main-container" class="sidebar-closed">
         <div id="palette">
-            <img src="spin.svg" class="palette-spinner"/>
+            <i class="palette-spinner fa fa-spin fa-refresh fa-2x"></i>
             <div class="palette-scroll">
                 <div class="palette-category">
                     <div class="palette-header"><i class="expanded fa fa-chevron-down"></i><span>skynet</span></div>
